seller messages data
